stock_predict/logs/stock.log.2025-10-02
2025-10-02 12:27:53 [    INFO] stock | done
2025-10-02 12:31:57 [    INFO] stock | done
2025-10-02 12:34:22 [    INFO] stock | done
2025-10-02 13:20:21 [    INFO] stock | PostgreSQL 连接池创建成功
2025-10-02 13:20:21 [   ERROR] stock | 数据库操作异常
Traceback (most recent call last):
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\utils\db_conn.py", line 45, in get_cursor
    yield cur
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\utils\db_conn.py", line 70, in execute
    cur.execute(sql, params)
    ~~~~~~~~~~~^^^^^^^^^^^^^
psycopg2.errors.SyntaxError: 错误:  语法错误 在 "," 或附近的
LINE 1: ...AT8, "low" FLOAT8, "vol" BIGINT, "amount" BIGINT, , PRIMARY ...
                                                             ^

2025-10-02 13:24:17 [    INFO] stock | PostgreSQL 连接池创建成功
2025-10-02 13:24:17 [    INFO] stock | 表 daily_kline 创建/已存在
2025-10-02 13:24:17 [    INFO] stock | done
